[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpilot"
version = "0.1.0"
description = "NetPilot — AI Network Troubleshooting Copilot. LLM-guided, layer-by-layer network diagnosis for ops engineers."
# No `readme` key: the project README lives at the repo root (../README.md) for
# GitHub, but setuptools refuses paths outside the package dir during
# `pip install -e .`, which broke CI's Install step. Omitting it keeps the
# install working; GitHub still renders the root README normally.
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NetPilot contributors" }]
keywords = [
    "network",
    "troubleshooting",
    "ai",
    "llm",
    "agent",
    "ops",
    "diagnostics",
    "openai-compatible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Settings / validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Networking primitives
    "httpx>=0.27",      # async HTTP probing
    "dnspython>=2.6",   # DNS resolution
    "cryptography>=42", # TLS certificate parsing
    # LLM — any OpenAI-compatible endpoint (DeepSeek / GLM paas/v4 / OpenAI / Ollama)
    "openai>=1.30",
    # LLM — optional Anthropic-protocol endpoint (e.g. BigModel /api/anthropic).
    # Used only when NETPILOT_LLM_PROTOCOL=anthropic; the OpenAI path needs none of it.
    "anthropic>=0.39",
    # Misc
    "python-dotenv>=1.0",
    "sse-starlette>=2.1", # streaming agent events to the browser
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27", # used by FastAPI TestClient
]

[project.urls]
Homepage = "https://github.com/Sh1c666/-"
Documentation = "https://github.com/Sh1c666/-/blob/main/docs/ARCHITECTURE.md"
Issues = "https://github.com/Sh1c666/-/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["netpilot*"]

# ----------------------------------------------------------------------------
# Tooling config
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
